# SimpleEnclaveCmake

./: CMakeLists.txt  README.md
App/: App.h  CMakeLists.txt
Enclave/: CMakeLists.txt
cmake/: ConfigSGX.cmake  FindSGXSDK.cmake
